--- a/hw/blogstyle.css
+++ b/hw/blogstyle.css
@@ -70,11 +70,67 @@
     z-index: 7;
   }
 
+  h4{
+    font-weight: 500;
+    color: var(--teal-950);
+  }
+
+ul{
+    display: list-item;
+    margin-left: 1rem;
+}
+
   main{
     padding-left: 20%;
     padding-right: 20%;
   }
 
-  ul{
-    list-style-type: circle;
+nav{
+    display: flex;
+    justify-content: space-evenly;
+    gap: 1rem;
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+}
+
+  .NavButton{ 
+    background-color: var(--teal-200);
+    color: var(--teal-800);
+    height: 2em;
+    width: fit-content;
+    padding-left: 1em;
+    padding-right: 1em;
+    border-radius: 1em;
+    margin-top: 0.5em;
+    border: none;
+    font-family: "Quicksand", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 300;
+    font-style: normal;
+    font-size: 0.75rem;
+    flex-grow: 1;
+  }
+  
+  .NavButton:hover{
+  
+    background-color: var(--teal-300);
+    color: var(--teal-900);
+  }
+
+  .hitbox{
+    width: 100%;
+    height: 100%;
+    color: var(--teal-800);
+    font-size: 0.75rem;
+    padding-top: 0.15rem;
+  }
+
+  a{
+    text-decoration: none;
+    color: var(--teal-800)
+  }
+
+  a:visited a:active a:hover{
+    color: var(--teal-800);
+    font-size: 0.75rem;
   }
