--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@
     flex-direction: column;
     background-color: var(--teal-500);
     color: white;
-    padding: 2vw;
+    padding: 1vw;
   
     font-family: "Quicksand", sans-serif;
     font-optical-sizing: auto;
@@ -62,6 +62,10 @@
   
   .BlogPost{
     display: none;
+  }
+
+  .BlogPostContainer {
+    display: none;
     flex-direction: column;
     border-radius: 5px;
     padding: 10px;
@@ -72,7 +76,7 @@
     box-shadow: 10px 10px 40px var(--teal-950);
   }
 
-  .BlogPost:hover{
+  .BlogPostContainer:hover{
     background-color: var(--teal-800);
   }
   
@@ -80,8 +84,10 @@
     margin-top: 10px;
     margin-bottom: 10px;
     display: flex;
-    justify-content: flex-start;
-    flex-wrap: wrap;
+    justify-content: center;
+    flex-wrap: nowrap;
+    gap: 1rem;
+    display: none;
   }
   
   .FilterBox{
@@ -95,6 +101,7 @@
     color: white;
     height: 2em;
     width: fit-content;
+    flex-grow: 1;
     padding-left: 1em;
     padding-right: 1em;
     border-radius: 1em;
@@ -179,6 +186,66 @@
   h1{
     font-size: 50rem;
     text-align: center;
+  }
+
+  .SplashContainer{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: stretch;
+    align-content: stretch;
+    width: 100%;
+    height: 96vh;
+    overflow: hidden;
+    gap: 1rem 2rem;
+  }
+
+  .Hw{
+    flex-grow: 1;
+    height: 96vh;
+  }
+
+  .About{
+    flex-grow: 2.5;
+    height: 64vh;
+  }
+
+  .ReviewSplash{
+    flex-grow: 1;
+
+    height: 64vh;
+  }
+
+  .Assignment{
+    flex-grow: 7;
+
+    height: 32vh;
+    align-self: flex-end;
+    translate: 0 -32vh;
+  }
+
+  .break{
+    flex-basis: 100%;
+  }
+
+  .break2{
+    flex-grow: 6;
+    height: 32vh;
+    align-self: flex-end;
+    outline: none;
+    background-color: none;
+    border: none;
+  }
+
+  .SplashStyle{
+    background-color: var(--teal-800);
+    font-family: "Quicksand", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
+    color: white;
+    font-size: 1rem;
   }
 
   /* Animation Stuff */
